# shipit

./: .gitignore  Cargo.toml  README.md  shipit-worker.service
scripts/: servers.list  shipitctl.bash
src/: bot.rs  db.rs  main.rs
worker/: Cargo.toml
worker/src/: main.rs
