[package]
name = "shipit"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros"] }
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12.2", features = ["macros"] }
axum = "0.7.5"
reqwest = { version = "0.12", features = ["json"] }
console = "0.15.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.25", features = ["tokio-comp"] }
snafu = "0.8.2"
dotenvy = "0.15.7"

[workspace]
members = ["worker"]
